--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
         padding: 0;
       }
 
+      p:hover{
+        color: #ffff00;
+      }
+      
+      p{
+        border: 2px solid #ffff00;
+        font-size: large;
+        color: rgb(219, 50, 15)
+      }
+
       header {
+        box-shadow: 10px 5px 5px red;
         background-color: #333;
         color: #fff;
         padding: 20px;
